<resources>
    <string name="app_name">PaSELLubong</string>
    <string name="title_browse">Browse</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account"><u>Create Account</u></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="e_mail">E-Mail Address</string>
    <string name="contact_number">Contact Number</string>
    <string name="billing_address">Billing Address</string>
    <string name="birth_date">Birth Date</string>
    <string name="bday_hint">DD/MM/YYYY</string>
    <string name="given_name">Given Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="welcome">Welcome!</string>
    <string name="add_product">Add Product</string>
    <string name="view_seller_information">View Seller Information</string>
    <string name="edit_credentials">Edit Credentials</string>
    <string name="log_out">Log Out</string>
    <string name="product_name">Product Name</string>
    <string name="upload_images">Upload up to 4 images</string>
    <string name="upload">Upload</string>
    <string name="region">Region</string>
    <string name="tribe">Tribe</string>
    <string name="seller_description">Seller Description</string>
    <string name="proceed">Proceed</string>
    <string name="add_another_item">Add Another Item</string>
    <string name="product_description">Product Description</string>
    <string name="name">Name</string>
    <string name="total_php_0_00">Total: Php 0.00</string>
    <string name="seller_id">Seller ID</string>
    <string name="confirm">Confirm</string>
    <string name="enter_seller_id">ENTER SELLER ID</string>
    <string-array name="categories">
        <item name="trinket">Trinkets</item>
        <item name="textiles">Textiles</item>
        <item name="furniture">Furniture</item>
        <item name="raw_materials">Raw Materials</item>
        <item name="shells">Shells</item>
        <item name="rattan">Rattan</item>
        <item name="jewelry">Jewelry</item>
        <item name="coconut">Coconut</item>
        <item name="bamboo">Bamboo</item>
    </string-array>
    <string-array name="tribes">
        <item name="bontoc">Bontoc</item>
        <item name="ifugao">Ifugao</item>
    </string-array>
    <string-array name="regions">
        <item name="car">CAR</item>
    </string-array>
</resources>
