<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.miguel909.bh2018.LoginActivity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <TextView
        android:id="@+id/welcomeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:text="@string/welcome"
        android:textSize="50sp"/>

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:ems="15"
        android:text="@string/add_product"/>

    <Button
        android:id="@+id/sellerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="15"
        android:text="@string/view_seller_information"/>

    <Button
        android:id="@+id/credentialsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sellerButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="15"
        android:text="@string/edit_credentials"/>

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/credentialsButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="15"
        android:text="@string/log_out"/>
</RelativeLayout>

