<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.miguel909.bh2018.LoginActivity"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/givenNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/given_name"/>

            <EditText
                android:id="@+id/givenNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/givenNameLabel"
                android:hint="@string/given_name"
                android:inputType="textPersonName"/>

            <TextView
                android:id="@+id/middleNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/givenNameText"
                android:layout_marginTop="10dp"
                android:text="@string/middle_name"/>

            <EditText
                android:id="@+id/middleNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/middleNameLabel"
                android:hint="@string/middle_name"
                android:inputType="textPersonName"/>

            <TextView
                android:id="@+id/lastNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/middleNameText"
                android:layout_marginTop="10dp"
                android:text="@string/last_name"/>

            <EditText
                android:id="@+id/lastNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lastNameLabel"
                android:hint="@string/last_name"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/confirmPasswordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/confirmPasswordLabel"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"/>

            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/confirmPasswordText"
                android:layout_marginTop="10dp"
                android:text="@string/e_mail"/>

            <TextView
                android:id="@+id/bdayLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/addressText"
                android:layout_marginTop="10dp"
                android:text="@string/birth_date"/>

            <TextView
                android:id="@+id/addressLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phoneText"
                android:layout_marginTop="10dp"
                android:text="@string/billing_address"/>

            <TextView
                android:id="@+id/confirmPasswordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordText"
                android:layout_marginTop="10dp"
                android:text="@string/confirm_password"/>

            <EditText
                android:id="@+id/usernameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/usernameLabel"
                android:hint="@string/username"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordLabel"
                android:hint="@string/password"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/addressText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/addressLabel"
                android:hint="@string/billing_address"
                android:inputType="textPostalAddress"/>

            <TextView
                android:id="@+id/passwordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/usernameText"
                android:layout_marginTop="10dp"
                android:text="@string/password"/>

            <EditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailLabel"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"/>

            <TextView
                android:id="@+id/usernameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lastNameText"
                android:layout_marginTop="10dp"
                android:text="@string/username"/>

            <TextView
                android:id="@+id/phoneLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailText"
                android:layout_marginTop="10dp"
                android:text="@string/contact_number"/>

            <EditText
                android:id="@+id/phoneText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phoneLabel"
                android:hint="@string/contact_number"
                android:inputType="phone"/>

            <EditText
                android:id="@+id/bdayText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bdayLabel"
                android:hint="@string/bday_hint"
                android:inputType="date"/>

            <Button
                android:id="@+id/createAccountButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/bdayText"
                android:text="@string/create_account"/>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
